fix : dark mode mobile navbar background color fix

--- a/pages/modules/NavBar.module.css
+++ b/pages/modules/NavBar.module.css
@@ -259,4 +259,7 @@
   .navbar::before {
     background: rgba(255, 255, 255, 1);
   }
+  [data-theme="dark"] .navbar::before {
+    background: rgba(17, 17, 17, 1);
+  }
 }
